removes console logging in setActive user and fixes long sequences of letters overflowing in messenger

--- a/GamameKaiDernoume/wwwroot/css/messenger.css
+++ b/GamameKaiDernoume/wwwroot/css/messenger.css
@@ -658,20 +658,22 @@
 		margin: 6px 6px 0 0;
 	}
 
-	#frame .content .messages ul li.replies p {
-		background: #435f7a;
-		color: #f5f5f5;
-	}
+    #frame .content .messages ul li.replies p {
+        overflow-wrap: break-word;
+        background: #435f7a;
+        color: #f5f5f5;
+    }
 
 	#frame .content .messages ul li.sent img {
 		float: right;
 		margin: 6px 0 0 6px;
 	}
 
-	#frame .content .messages ul li.sent p {
-		background: #f5f5f5;
-		float: right;
-	}
+    #frame .content .messages ul li.sent p {
+        overflow-wrap: break-word;
+        background: #f5f5f5;
+        float: right;
+    }
 
 	#frame .content .messages ul li img {
 		width: 25px;
